[package]
name = "ps_sig_final"
version = "0.34.0"

categories = [
    "cryptography",
    "asynchronous",
    "authentication",
    "no-std",
    "algorithms",
]
keywords = ["ockam", "crypto", "signature", "signing", "bls"]

publish = true
rust-version = "1.56.0"

[features]

[dependencies]
blake2 = { version = "0.9", default-features = false }
signature_bls = "0.34.0"
bls12_381_plus = { version = "0.5", default-features = false }
digest = { version = "0.9", default-features = false }
ff = { version = "0.10", default-features = false }
group = "0.10"
hmac-drbg = "0.3"
hkdf = { version = "0.11", default-features = false }
pairing = "0.20"
rand_core = "0.6"
rand_chacha = { version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
signature_core = "0.36.0"
subtle = { version = "2.4", default-features = false }
typenum = "1.13"
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }
rand = "0.8"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"
